[build-system]
requires = ["setuptools<81", "wheel"]
build-backend = "setuptools.build_meta"
[project]
license = { text = "MIT" }
name = "thc4me"
version = "0.3.2"
description = "Static-triage CLI and lightweight HTTP daemon for quick file inspection. Supports PE, ELF, Mach-O, APK, IPA."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [{ name = "Pa7ch3s" }]
dependencies = []
classifiers = [

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
thc4me = "thc4me.cli:main"
thc4me-daemon = "thc4me.daemon:main"
thc4me-deep = "thc4me.deep:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thc4me*"]

# [tool.setuptools] (unused)
# moved to [project].license-files

[tool.setuptools]
license-files = ["LICENSE"]

[project.optional-dependencies]
daemon = ["fastapi>=0.110", "uvicorn>=0.30"]
